Design implementation fixes (#600)
* changed descriptions color in homepage in dark mode

* fixed wallet drawer button color and adjusted elements accroding to design

* fixed wallet drawer icons squishing

* reduced spacing between nav items in navbar

* changed hero text to dual color

* changed hero text to new design

* changed fonts to montserrat

* fixed category cards to take path instead of url

* fixed hero description to match design

* fixes search overflowing by multiple tags and fixed hover of view more results on search

* removed 400 font weight from fonts

* changed hero section for learn secondary button and removed letter spacing wider at all places

* Update i18n.js

testing copy

* Update src/utils/i18n.js

* Update src/utils/i18n.js

* Update src/utils/i18n.js

* changed help center to iq learn

* fixed all issues according to review

--- a/src/pages/static/assets/global.css
+++ b/src/pages/static/assets/global.css
@@ -112,7 +112,7 @@ html {
 
 /* WYSIWYG MODE STYLES */
 .toastui-editor-contents * {
-  font-family: poppins, sans-serif !important;
+  font-family: Montserrat, sans-serif !important;
 }
 .toastui-editor-contents :where(h1, h2, h3, h4, h5, h6) {
   border-bottom: none !important;
@@ -165,11 +165,11 @@ html[data-theme='dark'],
 /* MARKDOWN MODE STYLES */
 .md-mode :where(div) {
   font-weight: 400 !important;
-  font-family: poppins, sans-serif !important;
+  font-family: Montserrat, sans-serif !important;
 }
 .toastui-editor-md-heading {
   font-weight: 600 !important;
-  font-family: poppins, sans-serif !important;
+  font-family: Montserrat, sans-serif !important;
 }
 
 /* =========================== */
